--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,19 @@ body {
   color: #828FA3;
   margin-left: 32px;
 }
+.sidebar__board-button {
+  background: none;
+  border: none;
+  padding: 0.5rem;
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+}
+
+.sidebar__board-button--active {
+  background-color: var(--primary);
+  color: white;
+}
+
